[package]

name = "cef"
version = "0.0.1"
authors = ["Dylan Ede <dylanede@googlemail.com>"]

[dependencies]
bitflags = "0.8"
#num = "*"
#num-macros = "0.1" requires nightly
libc = "0.2"

# Consider using this when proc_macro_attribute lands in stable.
# extern_attrib = "0.2"
# Using macros 1.1 version in module src/extern_macro/ for now.

[dependencies.cef_ffi]
git = "https://github.com/anderejd/cef_ffi"

[target.x86_64-pc-windows-gnu.dependencies]
kernel32-sys = "*"

[target.x86-pc-windows-gnu.dependencies]
kernel32-sys = "*"

