[package]

name = "cef"
version = "0.0.1"
authors = ["Dylan Ede <dylanede@googlemail.com>"]

[dependencies]
# TODO: Specify dependency versions when cef-rs is stable.
bitflags = "*"
libc = "*"
memalloc = "*" # drop-in replacement for alloc but using stable Rust.

# Consider using this when proc_macro_attribute lands in stable.
# Using macros 1.1 version in module src/extern_macro/ for now.
# extern_attrib = "*"

[dependencies.cef_ffi]
path = "cef_ffi"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "*"

